--- a/duduk/footer.css
+++ b/duduk/footer.css
@@ -17,7 +17,7 @@
     float: right;
 }
 
-.footer_appbdown {
+.footer_appdown {
     font-size: 0.875rem;
     font-weight: 700;
     line-height: 1.4;
